🐛Fix: 예약 엔터티 수정 및 테스트 코드 수정